# rigaku_smartlab

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1-JS-AlGaN_SiC_RSM.ipynb  2-JS-AlN_on_Si_HRXRD_RSM.ipynb  3-JS-GaN_HEMT_Si_HRXRD_RSM.ipynb
rigaku_smartlab/: dataset.py
