[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rigaku_smartlab"
version = "0.0.1"
description = "Analysis of HR-XRD measurements for polycrystalline/epitaxial thin films"
authors = [
  { name = "Josef Stevanus" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["rigaku_smartlab"]
include = ["pyproject.toml", "rigaku_smartlab/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["rigaku_smartlab"]
force-sort-within-sections = true

